<resources>
    <string name="app_name">MyCalculatorApp</string>
    <string name="dev">/</string>
    <string name="ac">AC</string>
    <string name="mul">*</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="rem">%</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="min">-</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="over">1/x</string>
    <string name="equals">=</string>
    <string name="_1">1</string>
    <string name="z">0</string>
</resources>
