<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.mycalculatorapp.MainActivity"
    android:orientation="vertical"
    android:background="@color/D_Grey"
    >

    <TextView
        android:id="@+id/lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="end"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:inputType="text"
        android:padding="20dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorLink="@android:color/transparent"
        android:textSize="35sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_bias="0.49"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp">

            <LinearLayout style="@style/LayoutStyle">

                <Button
                    android:id="@+id/AC"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:text="@string/ac"
                    android:onClick="clearClick"/>

                <Button
                    android:id="@+id/divide"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:text="@string/dev"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/multiply"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:text="@string/mul"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/clear"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:onClick="clearClick"
                    android:text="@string/c" />

            </LinearLayout>

            <LinearLayout style="@style/LayoutStyle">

                <Button
                    android:id="@+id/seven"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:onClick="onBtnClick"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/eight"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:text="@string/_8"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/nine"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:onClick="onBtnClick"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/percent"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:text="@string/rem"
                    android:onClick="percentClick"/>

            </LinearLayout>

            <LinearLayout style="@style/LayoutStyle">

                <Button
                    android:id="@+id/four"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:text="@string/_4"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/five"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:text="@string/_5"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/six"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:text="@string/_6"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/minus"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:text="@string/min"
                    android:onClick="onBtnClick"/>

            </LinearLayout>

            <LinearLayout style="@style/LayoutStyle">

                <Button
                    android:id="@+id/one"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:text="@string/_1"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/two"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:text="@string/_2"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/three"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:text="@string/_3"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/plus"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:text="@string/plus"
                    android:onClick="onBtnClick"/>

            </LinearLayout>

            <LinearLayout style="@style/LayoutStyle">


                <Button
                    android:id="@+id/dot"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:text="@string/dot"
                    android:onClick="dotClick"/>

                <Button
                    android:id="@+id/zero"
                    style="@style/ButtonStyle"
                    android:background="@color/Grey"
                    android:text="@string/_0"
                    android:onClick="onBtnClick"/>

                <Button
                    android:id="@+id/over"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:text="@string/over"
                    android:onClick="overClick"/>

                <Button
                    android:id="@+id/equals"
                    style="@style/ButtonStyle"
                    android:background="@color/colorAccent"
                    android:text="@string/equals"
                    android:onClick="onEqClick"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
